--- a/index.html
+++ b/index.html
@@ -12,8 +12,38 @@
 </head>
 <body>
     <h1 id="main-heading"><img src="./assets/img/calculator.png" alt="Calculator Logo">Web Calculator</h1>
-    <div class="calc-container">
+    <div id="calc-container">
+        <input id="screen" type="text" readonly>
+        <div class="buttons">
+            <button>(</button>
+            <button>)</button>
+            <button>%</button>
+            <button>←</button>
 
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>÷</button>
+
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>x</button>
+
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+            <button>+</button>
+        </div>
     </div>
+
+    <footer>
+        <img src="./assets/img/github.svg" alt="github icon"> <a href="http://">Yvesaur</a>
+    </footer>
 </body>
 </html>
