--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
     <h1 id="main-heading"><img src="./assets/img/calculator.png" alt="Calculator Logo">Web Calculator</h1>
     <div id="calc-container">
         <input id="screen" type="text" readonly>
-        <div class="buttons">
-            <button>(</button>
-            <button>)</button>
-            <button>%</button>
-            <button>←</button>
+        <div class="btn-container">
+            <button value="(">(</button>
+            <button value=")">)</button>
+            <button value="%">%</button>
+            <button value="←">←</button>
 
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>÷</button>
+            <button value="7">7</button>
+            <button value="8">8</button>
+            <button value="9">9</button>
+            <button value="/">÷</button>
 
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>x</button>
+            <button value="4">4</button>
+            <button value="5">5</button>
+            <button value="6">6</button>
+            <button value="*">x</button>
 
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button value="1">1</button>
+            <button value="2">2</button>
+            <button value="3">3</button>
+            <button value="-">-</button>
 
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-            <button>+</button>
+            <button value="0">0</button>
+            <button value=".">.</button>
+            <button value="=">=</button>
+            <button value="+">+</button>
         </div>
     </div>
 
