feat: :sparkles: Addition, Substraction, Multiplication, Division
Bug/s: -subtraction /n test

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <footer>
-        <img src="./assets/img/github.svg" alt="github icon"> <a href="http://">Yvesaur</a>
+        <img src="./assets/img/github.svg" alt="github icon"> <a href="https://github.com/yvesaur">Yvesaur</a>
     </footer>
 </body>
 </html>
