style: :lipstick: Mobile responsive support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculator Web App</title>
     <link rel="shortcut icon" href="./assets/img/calculator.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-mobile.css">
     <script src="main.js" async defer></script>
 
 </head>
